styles/sections/conf-statistics/conf-statistics.css
.conf-statistics {
  display: flex;
  flex-direction: column;
  padding: 1.67vw 3.9vw;
  background-color: var(--page-background-color);
  position: relative;
  gap: 10vw;
}

.conf-statistics::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: url("../../../assets/images/noise.webp");
  opacity: 0.15;
}

.conf-statistics__statistics-wrapper {
  display: flex;
  padding-bottom: 1.67vw;
}



@media (max-width: 767px) {
  .conf-statistics {
    padding: 6.5vw 4vw;
    gap: 5vw;
  }
}

